--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ h2 {
     font-size: 1.75em;
 }
 a:link,a:visited {
-    color: #0E710E;
+    color: #4285F4;
     text-decoration: none;
 }
 a:hover {
-    color: #208799;
+    color: #001a66;
 }
 h1 {
     text-align: center;
@@ -170,7 +170,7 @@ figure {
     padding: 16px;
 }
 .green {
-    color: #0E710E;
+    color: #4285F4;
     font-weight: bold;
 }
 .orange {
@@ -310,7 +310,7 @@ pre {
 
 .image-grid {
     display: grid;
-    grid-template-columns: 1fr 1.25fr;
+    grid-template-columns: 1fr 1fr;
     gap: 10px;
     width: 100%; 
 }
@@ -418,7 +418,7 @@ blockquote {
 
 .results-table .best-score {
     font-weight: bold;
-    color: #0E710E;
+    color: #4285F4;
 }
 
 </style>
@@ -440,7 +440,7 @@ blockquote {
 <div class="container">
     <div class="paper-title">
     <h1>
-        <font color="#0E710E">re</font><font color="#0E710E">A</font><font color="#0E710E">R</font>: Rethinking Visual Autoregressive Models via Generator-Tokenizer Consistency Regularization
+        <font color="#4285F4">re</font><font color="#4285F4">A</font><font color="#4285F4">R</font>: Rethinking Visual Autoregressive Models via Generator-Tokenizer Consistency Regularization
     </h1>
     </div>
 
@@ -448,14 +448,14 @@ blockquote {
         <center>
             <div class="author-row-new">
                 <a href="https://qy-h00.github.io/">Qiyuan He<sup>1</sup></a>,
-                <a href="#">Yicong Li<sup>1</sup></a>,
-                <a href="#">Haotian Ye<sup>2</sup></a>,
+                <a href="https://yl3800.github.io/">Yicong Li<sup>1</sup></a>,
+                <a href="https://haotianye.com/">Haotian Ye<sup>2</sup></a>,
                 <a href="https://personal-page.wjh.app/">Jinghao Wang<sup>3</sup></a>,
-                <a href="#">Xinyao Liao<sup>1</sup></a>,
-                <a href="https://appsrv.cse.cuhk.edu.hk/~pheng/index.php"><strong>Pheng-Ann Heng</strong><sup>3</sup></a>,
-                <a href="#"><strong>Stefano Ermon</strong><sup>2</sup></a>,
-                <a href="#"><strong>James Zou</strong><sup>2</sup></a>,
-                <a href="https://www.comp.nus.edu.sg/~ayao//"><strong>Angela Yao</strong><sup>1</sup></a>
+                <a href="#">Xinyao Liao<sup>1</sup></a>,<br>
+                <a href="https://appsrv.cse.cuhk.edu.hk/~pheng/index.php">Pheng-Ann Heng<sup>3</sup></a>,
+                <a href="#">Stefano Ermon<sup>2</sup></a>,
+                <a href="#">James Zou<sup>2</sup></a>,
+                <a href="https://www.comp.nus.edu.sg/~ayao//">Angela Yao<sup>1</sup></a>
             </div>
         </center>
         <center>
